style: add overflow visible to prevent section icon cropping on mobile devices

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,6 +3,7 @@
     grid-template-rows: repeat(3, auto);
     grid-template-columns: auto 1fr;
     column-gap: 1rem;
+    overflow-x: visible;
 }
 
 .section__icon,
@@ -32,7 +33,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem 0;
-    overflow: visible;
+    overflow-x: visible;
 }
 
 .section__icon::after {
@@ -46,7 +47,7 @@
     translate: -50% -50%;
     border-radius: 50%;
     filter: blur(10px);
-    overflow: visible;
+    overflow-x: visible;
 }
 
 .section__icon > svg {
